新增任務狀態

--- a/add_task.html
+++ b/add_task.html
@@ -56,9 +56,9 @@
 					<div class="item">
 						任務狀態
 						<div class="menu">
-					      <a class="item">委託任務
+					      <a href="entrust_task.html" class="item">委託任務
 					      </a>
-					      <a class="item">承接任務
+					      <a href="accept_task.html" class="item">承接任務
 					      	<div class="task_menu_message ui teal left pointing orange label">1</div>
 					      </a>
 					    </div>
@@ -94,7 +94,7 @@
 								  <div class="field">
 								    <label>結束時間</label>
 								    <input type="text" data-field="datetime" readonly>
-								    	<div id="dtBox"></div>
+								    <div id="dtBox"></div>
 								  </div>
 								  <div class="field">
 								    <label>連絡地址</label>
