--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
 					<div class="item">
 						任務狀態
 						<div class="menu">
-					      <a class="item">委託任務
+					      <a href="entrust_task.html" class="item">委託任務
 					      </a>
-					      <a class="item">承接任務
+					      <a href="accept_task.html" class="item">承接任務
 					      	<div class="task_menu_message ui teal left pointing orange label">1</div>
 					      </a>
 					    </div>
